# explore_shader

./: .gitignore  README.md
1.SettingUpProject/: CMakeLists.txt
2.AddCameraControl/: CMakeLists.txt  simple_glut.cpp
3.Read_Shader_Obj_FromFile/: CMakeLists.txt  fragment.shader  main.cpp  misc.cpp  vertex.shader
4.ReadShowNormal/: CMakeLists.txt  face_vertex.shader  geometry.shader  main.cpp  misc.cpp
5.BasicLight/: directionalLight_vertex.shader  main.cpp  misc.cpp  normal_vertex.shader  pointLight_vertex.shader  spotLight_vertex.shader
6.ADSLighting/: CMakeLists.txt  ads_vertex.shader  flat_fragment.shader  flat_vertex.shader  fragment.shader  halfAngle_fragment.shader  main.cpp  phong_fragment.shader  phong_vertex.shader  spot_vertex.shader
7.PlanarShadows/: CMakeLists.txt  Mesh.cpp  Mesh.h  Program.cpp  Program.h  ads_vertex.shader  main.cpp  shadow.vertex
